# owncast-agent

./: .bumpversion.cfg  .pre-commit-config.yaml  AGENTS.md  Dockerfile  MANIFEST.in  README.md  compose.yml  debug.Dockerfile  openapi.json  pyproject.toml
owncast_agent/: __init__.py  __main__.py  agent_server.py  auth.py  graph_config.py  mcp_config.json  mcp_server.py  owncast_api.py  owncast_models.py
owncast_agent/agent/: IDENTITY.md
owncast_agent/agent_data/: MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json
